✨ feat: handle empty command & minor ui changes

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
 ╚══════╝   ╚═╝   ╚══════╝╚═╝╚═╝  ╚═══╝╚═╝      ╚═════╝ 
 </pre>
       <div class="my-2 line-b pb-2 text-sm md:text-base">
-        <span class="text-red-500">sysinfo:~$</span>
+        <span class="text-red-500"
+          >sysinfo:~<span class="text-green-500">$</span></span
+        >
         <span id="dynamic-status" class="text-slate-50"></span>
       </div>
       <div id="terminal">
