✨ feat: implement domain command functionality

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
           "sysinfo: For system info",
           "battery: For battery info",
           "network: For network info",
+          "weather: For weather info",
+          "domain: For domain info",
           "help: For more information",
           "clear: To clear the screen",
         ],
