🔄 refactor: add dns command in dynamic command preview line

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
           "battery: For battery info",
           "network: For network info",
           "weather: For weather info",
+          "dns: For DNS info",
           "domain: For domain info",
           "help: For more information",
           "clear: To clear the screen",
